# zope.principalannotation

./: .coveragerc  .gitignore  .meta.toml  .travis.yml  CHANGES.rst  CHANGES.txt  MANIFEST.in  README.rst  README.txt  buildout.cfg  pyproject.toml  setup.py  tox.ini
docs/: api.rst  conf.py  index.rst  narr.rst  requirements.txt
src/zope/principalannotation/: README.rst  README.txt  __init__.py  configure.zcml  interfaces.py  tests.py  utility.py
